--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
 	</head>
 	<body>
 		<!-- 
-            TIP CALCULATOR PROJECT
-                ----------
-        - input total of bill
-        - input service quality
-            - will determine percentage of total to be tipped
-            - include option to enter custom tip percentage
-        - option to enter amount of people paying
-            - will provide due portions based on amount of people
-        - include button to retrieve calculations
-        - Include reset button
-        - have an itemized display 
-        
         Extra ideas:
             - Create a cover image for entire BG that expresses the mood of the service quality and changes with drop selection
             - Give the calculator a shake animation any time that the calculator is reset
@@ -43,32 +31,34 @@
 				<!-- BEGIN user interface -->
 				<div class="calc__ui">
 					<p class="text labels">How much was the bill?</p>
-					<input type="text" class="bill__total" />
+					<input type="text" class="bill__total" placeholder="0" />
 					<p class="text labels">How was the service?</p>
 					<!-- QUALITY drop down -->
-					<select name="quality" id="">
-						<option value="0">The worse</option>
-						<option value="1">Kinda bad</option>
-						<option value="2" selected>Good</option>
-						<option value="3">Great!</option>
-						<option value="4">Beyond words AMAZING!</option>
+					<select class="quality__options" name="quality" id="">
+						<option value="0">The worse - 5%</option>
+						<option value="1">Kinda bad - 10%</option>
+						<option value="2" selected>Good - 15%</option>
+						<option value="3">Great! - 20%</option>
+						<option value="4">Beyond words AMAZING! - 25%</option>
 					</select>
 					<!-- Amount of payers -->
 					<p class="text labels">How many people are paying?</p>
-					<input type="number" />
+					<input class="head__count" type="number" placeholder="0" />
 					<!-- SUMMARY -->
-					<p class="text summary hide__summary">
-						Ammount Due: $<span class="summary_due">50.00</span>
-					</p>
-					<p class="text summary hide__summary">
-						Tip: $<span class="summary_tip">15.00</span>
-					</p>
-					<p class="text summary hide__summary">
-						Total: $<span class="summary_total">65.00</span>
-					</p>
-					<p class="text summary hide__summary">
-						Each of you pay: $<span class="summary_each">13.00</span>
-					</p>
+					<div class="summary__cont">
+						<p class="text summary">
+							Ammount Due: $<span class="summary_due">50.00</span>
+						</p>
+						<p class="text summary">
+							Tip: $<span class="summary_tip">15.00</span>
+						</p>
+						<p class="text summary">
+							Total: $<span class="summary_total">65.00</span>
+						</p>
+						<p class="text summary">
+							Each of you pay: $<span class="summary_each">13.00</span>
+						</p>
+					</div>
 					<!-- CALCULATE btn -->
 					<button class="calc__btn">CALCULATE</button>
 				</div>
